--- a/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
@@ -1,24 +1,24 @@
 :_content-type: PROCEDURE
-:description: The Woopra telemetry plug-in
+:description: The Woopra telemetry plugin
 :keywords: extensions, telemetry
-:navtitle: The Woopra telemetry plug-in
+:navtitle: The Woopra telemetry plugin
 :page-aliases: extensions:the-woopra-telemetry-plug-in.adoc
 
 [id="the-woopra-telemetry-plugin"]
 
-= The Woopra telemetry plug-in
+= The Woopra telemetry plugin
 
-The link:https://github.com/che-incubator/devworkspace-telemetry-woopra-plugin[Woopra Telemetry Plugin] is a plug-in built to send telemetry from a {prod} installation to Segment and Woopra.
-This plug-in is used by link:https://workspaces.openshift.com[Eclipse Che hosted by Red Hat], but any {prod} deployment can take advantage of this plug-in.
+The link:https://github.com/che-incubator/devworkspace-telemetry-woopra-plugin[Woopra Telemetry Plugin] is a plugin built to send telemetry from a {prod} installation to Segment and Woopra.
+This plugin is used by link:https://workspaces.openshift.com[Eclipse Che hosted by Red Hat], but any {prod} deployment can take advantage of this plugin.
 There are no dependencies other than a valid Woopra domain and Segment Write key.
-The devfile v2 for the plug-in, link:https://raw.githubusercontent.com/che-incubator/devworkspace-telemetry-woopra-plugin/main/plugin.yaml[plugin.yaml], has four environment variables that can be passed to the plug-in:
+The devfile v2 for the plugin, link:https://raw.githubusercontent.com/che-incubator/devworkspace-telemetry-woopra-plugin/main/plugin.yaml[plugin.yaml], has four environment variables that can be passed to the plugin:
 
 - `WOOPRA_DOMAIN` - The Woopra domain to send events to.
 - `SEGMENT_WRITE_KEY` - The write key to send events to Segment and Woopra.
-- `WOOPRA_DOMAIN_ENDPOINT` - If you prefer not to pass in the Woopra domain directly, the plug-in will get it from a supplied HTTP endpoint that returns the Woopra Domain.
-- `SEGMENT_WRITE_KEY_ENDPOINT` - If you prefer not to pass in the Segment write key directly, the plug-in will get it from a supplied HTTP endpoint that returns the Segment write key.
+- `WOOPRA_DOMAIN_ENDPOINT` - If you prefer not to pass in the Woopra domain directly, the plugin will get it from a supplied HTTP endpoint that returns the Woopra Domain.
+- `SEGMENT_WRITE_KEY_ENDPOINT` - If you prefer not to pass in the Segment write key directly, the plugin will get it from a supplied HTTP endpoint that returns the Segment write key.
 
-To enable the Woopra plug-in on the {prod} installation:
+To enable the Woopra plugin on the {prod} installation:
 
 .Procedure
 
@@ -35,8 +35,8 @@ spec:
       plugins:                           <2>
       - 'https://your-web-server/plugin.yaml'
 ----
-<1> The `editorId` to set the telemetry plug-in for.
-<2> The URL to the telemetry plug-in's devfile v2 definition.
+<1> The `editorId` to set the telemetry plugin for.
+<2> The URL to the telemetry plugin's devfile v2 definition.
 
 .Additional resources
 
