--- a/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
+++ b/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
@@ -44,7 +44,7 @@ NOTE: If the specified set of extension IDs isn't available in the {prod-short} 
 
 
 [id="visual-studio-code-extensions-in-devfile"]
-== Defining Visual Studio Code extension attributes in the devfile
+== Defining Microsoft Visual Studio Code - Open Source extension attributes in the devfile
 
 If it's not possible to add extra files in the GitHub repository, you can define some of the plugin or extension attributes by inlining them in the devfile. You can use this procedure with both `.vscode/extensions.json` and `.che/che-theia-plugins.yaml` file contents.
 
