adding a note about branding into the user guide

--- a/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
@@ -9,6 +9,8 @@
 
 The default in-browser IDE in a new workspace is Microsoft Visual Studio Code - Open Source.
 
+NOTE: Because the {prod-short} build of Microsoft Visual Studio Code - Open Source supports branding, your organization might be using a branded build.
+
 You can select another supported in-browser IDE by either method:
 
 * When you start a new workspace by visiting a URL, you can choose an IDE for that workspace by adding the `che-editor` parameter to the URL. See xref:selecting-an-in-browser-ide-for-one-new-workspace.adoc[].
