--- a/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
@@ -9,7 +9,7 @@
 
 The default in-browser IDE in a new workspace is Microsoft Visual Studio Code - Open Source.
 
-NOTE: Because the {prod-short} build of Microsoft Visual Studio Code - Open Source supports branding, your organization might be using a branded build.
+NOTE: Because the {prod-short} build of Microsoft Visual Studio Code - Open Source supports custom branding, your organization might be using a branded build.
 
 You can select another supported in-browser IDE by either method:
 
