docs: refactored outline

--- a/modules/end-user-guide/pages/maintaining-a-microsoft-visual-studio-code-extension-list.adoc
+++ b/modules/end-user-guide/pages/maintaining-a-microsoft-visual-studio-code-extension-list.adoc
@@ -1,24 +1,24 @@
 :_content-type: PROCEDURE
-:description: Adding a Microsoft Visual Studio Code extension to a workspace
+:description: Maintaining a Microsoft Visual Studio Code extension to a workspace
 :keywords: Visual Studio Code extension, user-guide
-:navtitle: Adding a Visual Studio Code extension to a workspace
-:page-aliases:
+:navtitle: Visual Studio Code extensions
+:page-aliases: adding-a-vscode-extension.adoc
 
-[id="adding-microsoft-visual-studio-code-extension"]
-= Adding a Microsoft Visual Studio Code extension list to a workspace
+[id="maintaining-microsoft-visual-studio-code-extension"]
+= Maintaining a Microsoft Visual Studio Code extension list
 
-{prod-short} can automatically install workspace recommended extensions.
+Configure your source code repository to enable Microsoft Visual Studio Code to automatically install workspace recommended extensions.
 
 .Prerequisites
 * {prod-short} has access to the link:https://www.open-vsx.org/[OpenVSX registry].
 +
 [TIP]
 ====
-To install recomended extensions in a restricted environment, consider these options:
-
-* xref:selecting-a-workspace-ide.adoc[] that accesses an internal plugin registry, such as Che-Theia.
+To install recommended extensions in a restricted environment, consider these options:
 
 * xref:administration-guide:configuring-the-open-vsx-registry-url.adoc[] to point to your OpenVSX registry.
+
+* xref:selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc[] that accesses an internal plugin registry, such as Che-Theia.
 
 * link:https://code.visualstudio.com/docs/editor/extension-marketplace#_install-from-a-vsix[Installing extensions from VSX files].
 ====
