--- a/modules/end-user-guide/pages/customizing-workspace-components.adoc
+++ b/modules/end-user-guide/pages/customizing-workspace-components.adoc
@@ -14,6 +14,6 @@ To customize workspace components:
 
 * xref:devfile-introduction.adoc[Use a devfile]
 
-* xref:selecting-a-workspace-ide.adoc[Select and customize your in-browser IDE].
+* xref:maintaining-consistent-workspace-ide-configuration.adoc[].
 
 * Add {prod-short} specific attributes in addition to the generic devfile specification.
