fix vale errors & do some small content tweaks
fix vale errors & do some small content tweaks

--- a/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
@@ -3,7 +3,7 @@
 [id="importing-extensions-from-the-open-vsx-registry"]
 = Importing extensions from the Open VSX Registry
 
-This section describes how to add VS Code extensions from link:https://open-vsx.org/[Open VSX Registry] to {prod-short}'s embedded Open VSX Registry.
+This section describes how to add Visual Studio Code extensions from link:https://open-vsx.org/[Open VSX Registry] to {prod-short}'s embedded Open VSX Registry.
 
 .Prerequisites
 
@@ -12,7 +12,7 @@ This section describes how to add VS Code extensions from link:https://open-vsx.
 
 .Procedure
 
-. Modify `openvsx-sync.json` file in the link:https://github.com/redhat-developer/devspaces/blob/devspaces-3-rhel-8/dependencies/che-plugin-registry/openvsx-sync.json[plugin-registry repository] to add an information about the extension:
+. Modify the plug-in registry's link:https://github.com/redhat-developer/devspaces/blob/devspaces-3-rhel-8/dependencies/che-plugin-registry/openvsx-sync.json[`openvsx-sync.json`] file to add an extension:
 +
 [source,json]
 ----
