--- a/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
@@ -3,16 +3,16 @@
 [id="importing-extensions-that-are-not-in-the-open-vsx-registry"]
 = Importing extensions that are not in the Open VSX Registry
 
-This section describes how to add VS Code extensions that are not in the link:https://open-vsx.org/[Open VSX Registry] to {prod-short}'s embedded Open VSX Registry.
+This section describes how to add Visual Studio Code extensions that are not in the link:https://open-vsx.org/[Open VSX Registry] to {prod-short}'s embedded Open VSX Registry.
 
 To use an extension that has not been published to the link:https://open-vsx.org/[Open VSX Registry], contact the extension's author to ask them to publish the extension. See link:https://github.com/eclipse/openvsx/wiki/Publishing-Extensions#how-to-publish-an-extension[How to Publish an Extension].
 
-If you need the extension and the owner cannot or will not publish it, you may be able to fork it and publish it yourself. Consult the license terms of the extension to find out if this is possible. 
+If you need the extension and the owner cannot or will not publish it, you might be able to fork it and publish it yourself. Consult the license terms of the extension to find out if this is possible. 
 
 You can also import the extension into the local registry from the procedure in this document. 
 
 .Prerequisites
-. The VS Code extension file (.vsix) must be available to download via direct link.
+. The Visual Studio Code extension file (.vsix) must be available to download from a valid URL.
 . The ID and version of the extension to be added.  
 
 .Procedure
@@ -36,7 +36,7 @@ for example:
         "download": "https://github.com/redhat-developer/vscode-yaml/releases/download/1.10.1/yaml-1.10.1-19523.vsix"
     }
 ----
-. To build the plug-in registry container image and publish it to a container registry, run the following commands:
+. To build the plugin registry container image and publish it to a container registry, run the following commands:
 +
 [subs="+attributes,+quotes"]
 ----
