--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -7,11 +7,13 @@
 [id="extensions-for-microsoft-visual-studio-code-open-source"]
 = Extensions for Microsoft Visual Studio Code - Open Source
 
-To manage Visual Studio Code extensions {prod-short} uses link:https://open-vsx.org/[Open VSX Registry], it is an open source VS Code extensions registry.
+To manage extensions for link:https://github.com/microsoft/vscode[Microsoft Visual Studio Code - Open Source IDE], {prod-short} uses the link:https://open-vsx.org/[Open VSX Registry]. 
+
+This is an open source extensions registry, restricted in its use like the link:https://marketplace.visualstudio.com/[Visual Studio Code Marketplace] which can only be used with link:https://aka.ms/vsmarketplace-ToU[In-Scope Products and Services from Microsoft].
 
 The default Open VSX registry differs depending on how proxies or DNS is configued. 
 
-If open-vsx.org can be resolved, the default will be to the public link:https://open-vsx.org/[Open VSX Registry]; if not, then the default will be a locally cached Open VSX registry instance within the plugin-registry pod to support airgapped, offline, and proxy-restricted deployments. 
+If open-vsx.org can be resolved, the default will be to the public link:https://open-vsx.org/[Open VSX Registry]; if not, then the default will be a locally cached Open VSX registry instance within the plugin-registry pod to support air-gapped, offline, and proxy-restricted deployments. 
 
 It is also possible to control what instance of Open VSX should be used in the workspaces, should you want to include your own custom build. This configuration is part of the `CheCluster` Custom Resource:
 
@@ -25,7 +27,7 @@ spec:
 
 <1> Sets the URL of Open VSX registry. The default value is `https://open-vsx.org`. An empty string will cause  {prod-short} to use the local Open VSX registry in the plug-in registry pod.
 
-The local Open VSX registry runs in the plug-in registry pod and provides a subset of the VS Code extensions published on link:https://open-vsx.org/[Open VSX Registry].
+The local Open VSX registry runs in the plug-in registry pod and provides a subset of the Visual Studio Code extensions published on link:https://open-vsx.org/[Open VSX Registry].
 
 .Below, please find information about managing a local Open VSX registry:
 
