--- a/modules/administration-guide/partials/proc_removing-extensions-from-the-embedded-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_removing-extensions-from-the-embedded-open-vsx-registry.adoc
@@ -3,11 +3,11 @@
 [id="removing-extensions-from-the-embedded-open-vsx-registry"]
 = Removing extensions from the embedded Open VSX Registry
 
-This section describes how to remove VS Code extensions from the embedded Open VSX Registry.
+This section describes how to remove Visual Studio Code extensions from the embedded Open VSX Registry.
 
 .Procedure
-. Modify the plug-in registry's link:https://github.com/redhat-developer/devspaces/blob/devspaces-3-rhel-8/dependencies/che-plugin-registry/openvsx-sync.json[`openvsx-sync.json`] file to add an extension:
-. To build the plug-in registry container image and publish it to a container registry, run the following commands:
+. Modify the plugin registry's link:https://github.com/redhat-developer/devspaces/blob/devspaces-3-rhel-8/dependencies/che-plugin-registry/openvsx-sync.json[`openvsx-sync.json`] file to add an extension:
+. To build the plugin registry container image and publish it to a container registry, run the following commands:
 +
 [subs="+attributes,+quotes"]
 ----
