--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -2,7 +2,7 @@
 :description: {prod} provides developer workspaces with everything you need to code, build, test, run, and debug applications.
 :keywords: user-guide, workspaces-overview
 :navtitle: Developer workspaces
-:page-aliases: .:using-developer-workspaces.adoc, .:workspaces-overview.adoc, .:what-are-workspaces.html, .:creating-and-configuring-a-new-workspace.adoc, creating-and-configuring-a-new-workspace.adoc, authenticating-on-scm-server-with-a-personal-access-token.adoc, navigating-che.adoc, navigating-che-using-the-dashboard.adoc, importing-certificates-to-browsers.adoc, creating-a-workspace-from-local-devfile-using-chectl.adoc, importing-kubernetes-applications-into-a-workspace.adoc, workspaces-overview.adoc, configuring-a-workspace-with-dashboard.adoc, creating-a-workspace-from-a-code-sample.adoc, creating-a-workspace-from-a-template-devfile.adoc, creating-a-workspace-from-remote-devfile.adoc, running-a-workspace-with-dashboard.adoc, remotely-accessing-workspaces.adoc, importing-the-source-code-of-a-project-into-a-workspace.adoc, using-developer-workspaces.adoc
+:page-aliases: .:using-developer-workspaces.adoc, .:workspaces-overview.adoc, .:what-are-workspaces.html, .:creating-and-configuring-a-new-workspace.adoc, creating-and-configuring-a-new-workspace.adoc, authenticating-on-scm-server-with-a-personal-access-token.adoc, navigating-che.adoc, navigating-che-using-the-dashboard.adoc, importing-certificates-to-browsers.adoc, creating-a-workspace-from-local-devfile-using-chectl.adoc, importing-kubernetes-applications-into-a-workspace.adoc, workspaces-overview.adoc, configuring-a-workspace-with-dashboard.adoc, creating-a-workspace-from-a-code-sample.adoc, creating-a-workspace-from-a-template-devfile.adoc, creating-a-workspace-from-remote-devfile.adoc, running-a-workspace-with-dashboard.adoc, remotely-accessing-workspaces.adoc, importing-the-source-code-of-a-project-into-a-workspace.adoc, using-developer-workspaces.adoc, adding-a-vscode-extension.adoc
 
 [id="developer-workspaces"]
 = Developer workspaces
@@ -23,6 +23,15 @@ The embedded browser-based IDE is the point of access for everything running in 
 == Microsoft Visual Studio Code - Open Source
 
 Microsoft Visual Studio Code - Open Source is the default browser-based IDE.
+
+{prod-short} adds these features:
+
+Open VSX registry::
+The IDE uses the link:https://www.open-vsx.org/[Open VSX registry] to list and download extensions.
+The {prod-short} administrator can xref:administration-guide:configuring-the-open-vsx-registry-url.adoc[configure the Open VSX registry URL].
+
+Recommended extensions::
+The IDE installs automatically the link:https://code.visualstudio.com/docs/editor/extension-marketplace#_workspace-recommended-extensions[recommended extensions].
 
 {prod-short} adds these extensions:
 
