--- a/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
+++ b/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
@@ -2,20 +2,17 @@
 :description: Selecting an in-browser IDE for one new workspace
 :keywords: select-IDE
 :navtitle: Selecting an in-browser IDE for one new workspace
-:page-aliases: selecting-an-ide-by-using-a-url-parameter.adoc, selecting-a-workspace-ide.adoc
+:page-aliases: selecting-an-ide-by-using-a-url-parameter.adoc
 
 [id="selecting-an-in-browser-ide-for-one-new-workspace"]
 = Selecting an in-browser IDE for one new workspace
 
-You can select your preferred in-browser IDE when using a URL for starting a new workspace.
-This way, each developer using {prod-short} can start a workspace with a clone of the same project repository and the personal choice of the in-browser IDE.
+You can select your preferred in-browser IDE when using a URL for starting a new workspace. This way, each developer using {prod-short} can start a workspace with a clone of the same project repository and the personal choice of the in-browser IDE.
 
 .Procedure
+
 . Include the xref:url-parameter-for-the-workspace-ide.adoc[URL parameter for the workspace IDE] in the xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[URL for starting a new workspace].
 . Visit the URL in the browser.
 
 .Verification
 * Verify that the selected in-browser IDE loads in the browser tab of the started workspace.
-
-.Additional resources
-* xref:selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc[]
