--- a/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
@@ -1,15 +1,7 @@
 [id="parameters-for-che-editor-yaml"]
 = Parameters for che-editor.yaml
 
-The simplest way to select an IDE in the `che-editor.yaml` is to specify the `id` of an IDE that is available in the table of supported in-browser IDEs.
-
-.Supported in-browser IDEs
-[cols="1,1a,1a"]
-|===
-| IDE | `id` | Note
-include::example$snip_{project-context}-table-of-supported-editors.adoc[]
-|===
-
+The simplest way to select an IDE in the `che-editor.yaml` is to specify the `id` of an IDE that is available in the table of supported in-browser IDEs in xref:selecting-a-workspace-ide.adoc[]:
 
 .`id` selects an IDE from the plugin registry
 ====
