--- a/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc
+++ b/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc
@@ -1,5 +1,5 @@
 :_content-type: PROCEDURE
-:navtitle: Selecting the in-browser IDE
+:navtitle: Selecting an in-browser IDE for all workspaces that clone the same Git repository
 :description: Selecting an in-browser IDE for all workspaces that clone the same Git repository
 :keywords: select-IDE, che-editor, che-editor-yaml
 :page-aliases: specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc
