fix: Configuring networking with labels and domain
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/configuring-routes.adoc
+++ b/modules/administration-guide/pages/configuring-routes.adoc
@@ -22,17 +22,12 @@ You can configure labels, annotations, and domains for OpenShift Route to work w
 [source,yaml,subs="+quotes,+macros"]
 ----
 spec:
-  components:
-    cheServer:
-      extraProperties:
-        CHE_INFRA_OPENSHIFT_ROUTE_LABELS: __<labels>__ <1>
-        pass:a,c,m[CHE_INFRA_OPENSHIFT_ROUTE_HOST_DOMAIN__SUFFIX]: __<domain>__ <2>
-    networking:
-      labels: __<labels>__ <1>
-      domain: __<domain>__ <2>
-      annotations: __<annotations>__ <3>
+  networking:
+    labels: __<labels>__ <1>
+    domain: __<domain>__ <2>
+    annotations: __<annotations>__ <3>
 ----
-<1> A comma-separated list of labels that the target ingress controller uses to filter the set of Routes to service.
+<1> An unstructured key value map of labels that the target ingress controller uses to filter the set of Routes to service.
 <2> The DNS name serviced by the target ingress controller.
 <3> An unstructured key value map stored with a resource.
 
