--- a/modules/administration-guide/pages/configuring-ingresses.adoc
+++ b/modules/administration-guide/pages/configuring-ingresses.adoc
@@ -22,17 +22,12 @@ You can configure {orch-ingress} labels and annotations, if your organization re
 [source,yaml,subs="+quotes,+attributes"]
 ----
 spec:
-  components:
-    cheServer:
-      extraProperties:
-        CHE_INFRA_KUBERNETES_INGRESS_LABELS: __<labels>__ <1>
-        CHE_INFRA_KUBERNETES_INGRESS_ANNOTATIONS______JSON: "__<annotations>__" <2>
-    networking:
-      labels: __<labels>__ <1>
-      annotations: __<annotations>__ <2>
+  networking:
+    labels: __<labels>__ <1>
+    annotations: __<annotations>__ <2>
 ----
-<1> A comma-separated list of labels for {orch-ingress}: `key1=value1,key2=value2`.
-<2> Annotations for {orch-ingress} in JSON format: `{"key1": "value1", "key2" : "value2"}`.
+<1> An unstructured key value map of labels for {orch-ingress}.
+<2> An unstructured key value map of annotations for {orch-ingress}.
 
 .Additional resources
 
