docs: update content to reflect latest style guide

--- a/modules/end-user-guide/pages/url-parameter-for-starting-duplicate-workspaces.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-starting-duplicate-workspaces.adoc
@@ -9,7 +9,7 @@
 
 Visiting a URL for starting a new workspace results in a new workspace according to the devfile and with a clone of the linked Git repository.
 
-In some situations, you may need to have multiple workspaces that are duplicates in terms of the devfile and the linked Git repository. You can do this by visiting the same URL for starting a new workspace with a URL parameter.
+In some situations, you might need to have multiple workspaces that are duplicates in terms of the devfile and the linked Git repository. You can do this by visiting the same URL for starting a new workspace with a URL parameter.
 
 The URL parameter for starting a duplicate workspace is `new`:
 
