--- a/modules/end-user-guide/pages/url-parameter-for-the-devfile-file-name.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-devfile-file-name.adoc
@@ -9,7 +9,7 @@
 
 When you visit a URL for starting a new workspace, {prod-short} searches the linked Git repository for a devfile with the file name `.devfile.yaml` or `devfile.yaml`. The devfile in the linked Git repository must follow this file-naming convention.
 
-In some situations, you may need to specify a different, unconventional file name for the devfile.
+In some situations, you might need to specify a different, unconventional file name for the devfile.
 
 The URL parameter for specifying an unconventional file name of the devfile is `df=__<filename>__.yaml`:
 
