--- a/modules/end-user-guide/pages/url-parameter-for-the-devfile-file-path.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-devfile-file-path.adoc
@@ -9,7 +9,7 @@
 
 When you visit a URL for starting a new workspace, {prod-short} searches the root directory of the linked Git repository for a devfile with the file name `.devfile.yaml` or `devfile.yaml`. The file path of the devfile in the linked Git repository must follow this path convention.
 
-In some situations, you may need to specify a different, unconventional file path for the devfile in the linked Git repository.
+In some situations, you might need to specify a different, unconventional file path for the devfile in the linked Git repository.
 
 The URL parameter for specifying an unconventional file path of the devfile is `devfilePath=__<relative_file_path>__`:
 
