--- a/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
+++ b/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
@@ -1,7 +1,7 @@
 [id="requesting-persistent-storage-in-a-pvc"]
 = Requesting persistent storage in a PVC
 
-You may opt to apply a PersistentVolumeClaim (PVC) to request a PersistentVolume (PV) for your workspaces in the following cases:
+You can opt to apply a PersistentVolumeClaim (PVC) to request a PersistentVolume (PV) for your workspaces in the following cases:
 
 * Not all developers of the project need the PV.
 * The PV lifecycle goes beyond the lifecycle of a single workspace.
