minimalism: Troubleshooting Slow Workspaces
Co-authored-by: Rolfe Dlugy-Hegwer <rdlugyhe@redhat.com>

--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -64,7 +64,7 @@ To check that, open Developer Tools in the browser and check for `vendors` in th
 
 Providing enough CPU resources::
 +
-Plugins consume CPU resources. For example, when a plugin provides IntelliSense features, adding more CPU resources can lead to better performance.
+Plugins consume CPU resources. For example, when a plugin provides IntelliSense features, adding more CPU resources can improve performance.
 +
 Ensure the CPU settings in the devfile definition, `devfile.yaml`, are correct:
 +
