fix: change prod -> prod-short in devfile intro

--- a/modules/end-user-guide/pages/devfile-introduction.adoc
+++ b/modules/end-user-guide/pages/devfile-introduction.adoc
@@ -1,5 +1,5 @@
 [id="introduction-to-devfile"]
-= Introduction to devfile in {prod}
+= Introduction to devfile in {prod-short}
 
 link:https://devfile.io/[Devfiles] are `yaml` text files used for development environment customization. Use them to configure a devfile to suit your specific needs and share the customized devfile across multiple workspaces to ensure identical user experience and build, run, and deploy behaviours across your team.
 
