--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -11,7 +11,7 @@ To manage extensions for link:https://github.com/microsoft/vscode[Microsoft Visu
 
 This is an open source extensions registry, restricted in its use like the link:https://marketplace.visualstudio.com/[Visual Studio Code Marketplace] which can only be used with link:https://aka.ms/vsmarketplace-ToU[In-Scope Products and Services from Microsoft].
 
-The default Open VSX registry differs depending on how proxies or DNS is configued. 
+The default Open VSX registry differs depending on how proxies or DNS are configured. 
 
 If open-vsx.org can be resolved, the default will be to the public link:https://open-vsx.org/[Open VSX Registry]; if not, then the default will be a locally cached Open VSX registry instance within the plugin-registry pod to support air-gapped, offline, and proxy-restricted deployments. 
 
